add suggest friend feature
