# docs/swagger.yaml
@@ -75,6 +75,19 @@ definitions:
       username:
         type: string
     type: object
+  dto.UserListResp:
+    properties:
+      list:
+        items:
+          $ref: '#/definitions/dto.UserResp'
+        type: array
+      page:
+        type: integer
+      page_size:
+        type: integer
+      total:
+        type: integer
+    type: object
   dto.UserLoginReq:
     properties:
       password:
@@ -316,7 +329,9 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/dto.HTTPResp'
+            items:
+              $ref: '#/definitions/dto.UserListResp'
+            type: array
         "400":
           description: Bad Request
           schema:
@@ -540,6 +555,34 @@ paths:
           schema:
             $ref: '#/definitions/dto.HTTPResp'
       summary: ActiveUser
+      tags:
+      - users
+  /api/users/friends/suggest:
+    get:
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.UserResp'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.HTTPResp'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.HTTPResp'
+      summary: SuggestFriend
       tags:
       - users
   /api/users/reset-password:
